apps/demo-website/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-website
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: demo-website
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "800m"
            memory: "768Mi"
