apps/demo-website/overlays/prod/ingress-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-website
spec:
  routes:
  - kind: Rule
    match: Host(`prod.plutolab.live`)
    services:
    - name: demo-website-prod
      port: 80
